@@ -1,3 +1,7 @@
+2214.	[bug]		Deregister OpenSSL lock callback when cleaning
+			up.  Reorder OpenSSL cleanup so that RAND_cleanup()
+			is called before the locks are destroyed. [RT #17098]
+
 2213.	[bug]		SIG0 diagnostic failure messages were looking at the
 			wrong status code. [RT #17101]
 
